tests/ui/did_you_mean/issue-105225.stderr
error: redundant argument
  --> $DIR/issue-105225.rs:3:14
   |
LL |     println!("{x}", x);
   |              ^^^^^  - help: this can be removed
   |
note: the formatting specifier is referencing the binding already
  --> $DIR/issue-105225.rs:3:16
   |
LL |     println!("{x}", x);
   |                ^

error: redundant argument
  --> $DIR/issue-105225.rs:6:14
   |
LL |     println!("{x} {}", x, x);
   |              ^^^^^^^^     - help: this can be removed
   |
note: the formatting specifier is referencing the binding already
  --> $DIR/issue-105225.rs:6:16
   |
LL |     println!("{x} {}", x, x);
   |                ^

error: redundant argument
  --> $DIR/issue-105225.rs:9:14
   |
LL |     println!("{} {x}", x, x);
   |              ^^^^^^^^     - help: this can be removed
   |
note: the formatting specifier is referencing the binding already
  --> $DIR/issue-105225.rs:9:19
   |
LL |     println!("{} {x}", x, x);
   |                   ^

error: redundant argument
  --> $DIR/issue-105225.rs:13:14
   |
LL |     println!("{x} {y}", x, y);
   |              ^^^^^^^^^
   |
note: the formatting specifiers are referencing the bindings already
  --> $DIR/issue-105225.rs:13:16
   |
LL |     println!("{x} {y}", x, y);
   |                ^   ^
help: this can be removed
   |
LL -     println!("{x} {y}", x, y);
LL +     println!("{x} {y}", );
   |

error: redundant argument
  --> $DIR/issue-105225.rs:17:14
   |
LL |     println!("{} {} {x} {y} {}", x, x, x, y, y);
   |              ^^^^^^^^^^^^^^^^^^
   |
note: the formatting specifiers are referencing the bindings already
  --> $DIR/issue-105225.rs:17:26
   |
LL |     println!("{} {} {x} {y} {}", x, x, x, y, y);
   |                          ^
help: this can be removed
   |
LL -     println!("{} {} {x} {y} {}", x, x, x, y, y);
LL +     println!("{} {} {x} {y} {}", x, x, x, );
   |

error: aborting due to 5 previous errors

